--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <EditText
+        <com.simplemobiletools.commons.views.MyEditText
             android:id="@+id/notes_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
