update some colors

--- a/app/src/main/res/layout/new_note.xml
+++ b/app/src/main/res/layout/new_note.xml
@@ -14,5 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:inputType="textCapSentences"/>
+        android:inputType="textCapSentences"
+        android:textCursorDrawable="@null"/>
 </LinearLayout>
