--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -31,6 +31,7 @@
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/config_bg_color"
         android:layout_alignTop="@+id/config_bg_color"
+        android:layout_toEndOf="@+id/config_bg_color"
         android:layout_toRightOf="@+id/config_bg_color"
         android:background="@android:color/white">
 
@@ -54,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/config_text_color"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/config_text_color"
         android:fontFamily="sans-serif-light"
