--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -146,7 +146,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
-            android:padding="@dimen/activity_margin">
+            android:paddingBottom="@dimen/bigger_margin"
+            android:paddingLeft="@dimen/activity_margin"
+            android:paddingRight="@dimen/activity_margin"
+            android:paddingTop="@dimen/bigger_margin">
 
             <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/settings_widget_note_label"
@@ -159,12 +162,16 @@
                 android:paddingRight="@dimen/medium_margin"
                 android:text="@string/widget_note"/>
 
-            <com.simplemobiletools.commons.views.MyAppCompatSpinner
+            <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/settings_widget_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="@dimen/medium_margin"
+                android:layout_marginRight="@dimen/medium_margin"
+                android:background="@null"
+                android:clickable="false"/>
 
         </RelativeLayout>
     </LinearLayout>
