--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -24,16 +24,16 @@
     <item
         android:id="@+id/open_file"
         android:title="@string/open_file"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
     <item
-        android:id="@+id/save_as_file"
-        android:title="@string/save_as_file"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/export_as_file"
+        android:title="@string/export_as_file"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/delete_note"
         android:icon="@drawable/ic_delete"
         android:title="@string/delete_note"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
