Fix cursor not being visible

--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -18,7 +18,6 @@
             android:background="@null"
             android:gravity="top"
             android:inputType="textCapSentences|textMultiLine"
-            android:padding="@dimen/activity_margin"
-            android:textCursorDrawable="@null"/>
+            android:padding="@dimen/activity_margin" />
     </ScrollView>
 </RelativeLayout>
