--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -19,6 +19,7 @@
             android:gravity="top"
             android:inputType="textCapSentences|textMultiLine"
             android:padding="@dimen/activity_margin"
+            android:freezesText="true"
             android:textCursorDrawable="@null"/>
     </ScrollView>
 </RelativeLayout>
