--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -113,7 +113,7 @@
                 android:layout_toStartOf="@+id/settings_font_size"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/note_font_size"/>
+                android:text="@string/font_size"/>
 
             <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/settings_font_size"
