--- a/app/src/main/res/layout/rename_note.xml
+++ b/app/src/main/res/layout/rename_note.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        app:maxLines="1"/>
 </LinearLayout>
