--- a/app/src/main/res/layout/dialog_export_as.xml
+++ b/app/src/main/res/layout/dialog_export_as.xml
@@ -23,12 +23,38 @@
         android:paddingRight="@dimen/small_margin"
         android:paddingTop="@dimen/small_margin"/>
 
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/file_name_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/filename"
+        android:textSize="@dimen/smaller_text_size"/>
+
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/file_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
+        android:inputType="text"
         android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
+
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/file_extension_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/extension"
+        android:textSize="@dimen/smaller_text_size"/>
+
+    <com.simplemobiletools.commons.views.MyEditText
+        android:id="@+id/file_extension"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:inputType="text"
+        android:singleLine="true"
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 
 </LinearLayout>
