--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -15,5 +15,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 </LinearLayout>
