--- a/app/src/main/res/layout/dialog_rename_note.xml
+++ b/app/src/main/res/layout/dialog_rename_note.xml
@@ -14,5 +14,6 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
         android:singleLine="true"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
 </LinearLayout>
