--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -11,6 +11,10 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <com.simplemobiletools.commons.views.MyEditText
             android:id="@+id/notes_view"
             android:layout_width="match_parent"
@@ -21,6 +25,19 @@
             android:inputType="textCapSentences|textMultiLine"
             android:padding="@dimen/activity_margin"
             android:textCursorDrawable="@null"/>
+
+            <TextView
+                android:id="@+id/notes_counter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="italic"
+                android:text="123"
+                android:padding="5dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
 
     </ScrollView>
 </RelativeLayout>
