increase notes_view height to match_parent for easier clicking

--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -20,7 +20,7 @@
             <com.simplemobiletools.commons.views.MyEditText
                 android:id="@+id/notes_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@null"
                 android:freezesText="true"
                 android:gravity="top"
