--- a/app/src/main/res/layout/dialog_export_files.xml
+++ b/app/src/main/res/layout/dialog_export_files.xml
@@ -1,44 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/export_as_holder"
+    android:id="@+id/export_files_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/file_path_label"
+        android:id="@+id/folder_path_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/path"
         android:textSize="@dimen/smaller_text_size"/>
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/file_path"
+        android:id="@+id/folder_path"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_margin"
-        android:layout_marginLeft="@dimen/activity_margin"
+        android:paddingBottom="@dimen/activity_margin"
+        android:paddingLeft="@dimen/activity_margin"
         android:paddingRight="@dimen/small_margin"
         android:paddingTop="@dimen/small_margin"/>
-
-    <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/file_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/filename"
-        android:textSize="@dimen/smaller_text_size"/>
-
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/file_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_margin"
-        android:inputType="text"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/file_extension_label"
