--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -30,6 +30,10 @@
         android:title="@string/export_as_file"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/export_all_notes"
+        android:title="@string/export_all_notes"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/delete_note"
         android:icon="@drawable/ic_delete"
         android:title="@string/delete_note"
