--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!-- Release notes -->
+    <string name="release_45">Allow exporting all notes at once, toggling line wrap and autosave</string>
     <string name="release_39">
         Added a new option to use english language on non-english devices\n
         Allow scrolling widgets vertically
