Add Import Folder option

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -31,6 +31,10 @@
         android:title="@string/open_file"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/import_folder"
+        android:title="@string/import_folder"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/export_as_file"
         android:title="@string/export_as_file"
         app:showAsAction="never"/>
