--- a/app/src/main/res/layout/dialog_import_folder.xml
+++ b/app/src/main/res/layout/dialog_import_folder.xml
@@ -13,7 +13,7 @@
         android:id="@+id/open_file_filename_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/filename"
+        android:text="@string/folder"
         android:textSize="@dimen/smaller_text_size"/>
 
     <com.simplemobiletools.commons.views.MyTextView
