update commons to 4.4.27

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,7 +18,7 @@
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/rename_note"
-        android:icon="@drawable/ic_rename"
+        android:icon="@drawable/ic_rename_new"
         android:title="@string/rename_note"
         app:showAsAction="ifRoom"/>
     <item
